--- a/aboutme.css
+++ b/aboutme.css
@@ -1,33 +1,98 @@
-<body style="background-color:lightblue;">
+<!-- Sidebar -->
+<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
+  <h3 class="w3-bar-item">Menu</h3>
+  <a href="#" class="w3-bar-item w3-button">About</a>
+  <a href="#" class="w3-bar-item w3-button">Work</a>
+  <a href="#" class="w3-bar-item w3-button">Contact</a>
+</div>
+<body style="background-color:Bisque;">
 
-<h1 style="text-align:center; color:orange;font-size:50;">Gabriela Perez</h1>
+<h1 style="text-align:center;color:Peru;" >Gabriela Perez</h1>
 
-<p> <img src="https://pbs.twimg.com/profile_images/851579580007579649/2Z9NJUpb_400x400.jpg"alt="gabrielaperez" style="width:200px;height:200px;"> </p>
 
-<p1 style="color:white;font-size:20;">Bio:</p1> 
+ 
 
-<p1> My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.</p> 
+<p1 style="color:Burlywood;">Bio:</p1> 
+<style>
+p.double {border-style: double;}
+</style>
+<p style="color:Peru;"class="double">My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco</p>
 
-<p2 style="color:white;font-size:20;">Fun Fact About Me:</p2> 
+<p2 style="color:Burlywood;">Fun Fact About Me:</p2> 
 
-<p2> I don't have any experience with coding, and this is my first time dealing with it. </p> 
+<style>
+p.double {border-style: double;}
+</style>
+<p style="color:Peru;"class="double">I don't have any experience with coding, and this is my first time dealing with it.</p>
 
-<p3 style="color:white;font-size:20;"> Likes and Dislikes:</p3>
+<p3 style="color:Burlywood;"> Likes and Dislikes:</p3>
+<html>
+<head>
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;}
 
-<p3> Things I like include being outside, going out with friends, being with my pets, and listening to music. Things I dislike are things such as slow walkers and staying home</p>
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
 
-<p4 style="color:white;font-size:20;"> Work/Projects:</p4>
+tr:nth-child(even) {
+    background-color:Peru;
+}
+</style>
+</head>
+<body>
+<table>
+  <tr>
+    <th>Likes</th>
+    <th>Dislikes</th>
+    </tr>
+  <tr>
+    <td>Taking pictures</td>
+    <td>Mustard</td>
+    </tr>
+  <tr>
+    <td>Going out</td>
+    <td>Slow walkers</td>
+    </tr>
+  <tr>
+    <td>Hanging out with friends</td>
+    <td>People with no ambition</td>
+    </tr>
+  <tr>
+    <td>Listening to music</td>
+    <td>Slow wifi</td>
+    </tr>
+</table>
+</body>
+</html>
+<p4 style="color:Burlywood;"> Work/Projects:</p4>
+<style>
+p.double {border-style: double;}
+</style>
+<p style="color:Peru;"class="double">Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes. Below are two of the games that I have made.</p>
 
-<p4> Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes. Below are two of the games that I have made. </p>
 
-<p5 style="color:white;font-size:20;"> Paddle ball game:</p5> 
+<p5 style="color:Burlywood;"> Paddle ball game:</p5> 
+<style>
+p.double {border-style: double;}
+</style>
+<p style="color:Peru;"class="double">This was the first game I created on scratch with a partner, and together we were able to get the paddles and ball to move so two players can play the game.We also added extra features, like sound and color change. </p>
+<p7 style="color:Burlywood;">Robotics: </p1>
+<style>
+p.double {border-style: double;}
+</style>
+<p style="color:Peru;"class="double">So far, my experience has been good with robotics. We started working with an Arduino and a mini robot. Since starting, we have worked and been successful in creating a circuit, programing a code and having it conncect to the LED's, and making the piezo speaker from the Arduino make a song, and have the robot "dance" to the song that it's playing. </p>
 
-<p5> This was the first game I created on scratch with a partner, and together we were able to get the paddles and ball to move so two players can play the game.We also added extra features, like sound and color change. </p>
 
-<p> <a href="http://imgur.com/ldkSuCO"><img src="http://i.imgur.com/ldkSuCO.png" title="source: imgur.com"style="width:150px;height:150px;" /></a> </p> 
+<a href="http://imgur.com/ldkSuCO"><img src="http://i.imgur.com/ldkSuCO.png" title="source: imgur.com"style="width:150px;height:150px;" /></a> </p>  
 
-<p6 style="color:white;font-size:20;">Social Media:</p6>
+<p6 style="color:Burlywood;">Social Media: </p>
 
-<a href="https://www.instagram.com/baseddgaby/"target="_blank"><img src="https://instagram-brand.com/wp-content/themes/ig-branding/assets/images/ig-logo-email.png"style="width=50px;height:50px;"</p> 
+<a href="https://www.instagram.com/baseddgaby/"target="_blank"><img src="https://instagram-brand.com/wp-content/themes/ig-branding/assets/images/ig-logo-email.png"style="width=50px;height:50px;: </p>
 
 <a href="https://twitter.com/baseddgaby?lang=en"target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/1259px-Twitter_bird_logo_2012.svg.png"style="width=50px;height:50px;">
